# finetuner

./: .gitignore  README.md  pyproject.toml
src/finetuner_app/: __init__.py  cli.py  config.py  dataset.py  trainer.py
